Code tidy: renaming, compiler warnings